--- a/_posts/2010-09-01-back-again.html
+++ b/_posts/2010-09-01-back-again.html
@@ -27,5 +27,4 @@ posterous_slug: post/1047905729/back-again
 <p>&nbsp;&nbsp; &nbsp;render "shared/translate"</p>
 <p>&nbsp;&nbsp;end</p>
 </code></p>
-<p>Which is a super fast way of ajaxing the text-area text to an ActionController::Metal action, which faster than thought possible, returns the HTML output version of the Textile markup&rsquo;d text! Its incredibly fast since I&rsquo;m only using Metal rather than a full ActionController object. Plus its very simple in what it does, so I&rsquo;m pretty happy with how it worked out. Check out what it looks like!</p>
-<p>[[posterous-content:yahilmbvnDwdtAofxsqb]]</p>
+<p>Which is a super fast way of ajaxing the text-area text to an ActionController::Metal action, which faster than thought possible, returns the HTML output version of the Textile markup&rsquo;d text! Its incredibly fast since I&rsquo;m only using Metal rather than a full ActionController object. Plus its very simple in what it does, so I&rsquo;m pretty happy with how it worked out.</p>
