--- a/_posts/2010-09-01-dynamic-form-generation.html
+++ b/_posts/2010-09-01-dynamic-form-generation.html
@@ -9,8 +9,7 @@ posterous_slug: post/1047893587/dynamic-form-generation
 ---
 <p>Interesting app for Hargray Communication this past few weeks. I was asked to design a dynamic survey application that is built, more or less, based on a configuration stored in a database. This is so we can have a front-end application in Oracle that allows, say, non-technical marketing people to build a survey from a form, and then it generates a set of web pages allowing the customer to take the survey.</p>
 
-<p>So that&rsquo;s what I did:</p>
-<p>[[posterous-content:DAxJvyyvAIrBsboDdAzr]]</p>
+<p>So that&rsquo;s what I did</p>
 
 <p>This is a fairly simple app on the whole. Solely purposed to allow customers to take surveys based on a link we send them. So why am I mentioning this?</p>
 
