--- a/_posts/2011-04-08-a-new-thing-starting-at-sales.html
+++ b/_posts/2011-04-08-a-new-thing-starting-at-sales.html
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Untitled
+title: Stevie
 published: true
 date: 2011-04-08
 categories: []
 posterous_url: http://blog.hungerandthirstdesign.com/post/4446525388/a-new-thing-starting-at-salescrunch-we-have-a
 posterous_slug: post/4446525388/a-new-thing-starting-at-salescrunch-we-have-a
 ---
-<p>[[posterous-content:zIfAGwGEtCmBfagxyynv]]</p><p>A new thing starting at SalesCrunch. We have a mascot, and his name is Steve.</p>
+<p>A new thing starting at SalesCrunch. We have a mascot, and his name is Steve.</p>
