--- a/_posts/2011-08-18-designing-for-change.html
+++ b/_posts/2011-08-18-designing-for-change.html
@@ -13,7 +13,7 @@ posterous_slug: post/9067560580/designing-for-change
 
 <p>Our product, as I have noted before, is a presentation and tracking tool, purposed to allow users to present slide decks, normally as part of a sales presentation and provide the presenter with tracking metrics both in live (presenter-driven) and emailed (viewer-driven) meetings or presentations. As part of this, we allow the users to upload and/or select decks for use in presentations or to send to users. We have an interface for doing this that used to exist in two parts: One for uploading, naming and organizing decks, the other for selecting decks for use. As part of one level of redesign, these two interfaces were forced together so that, during a live meeting, a presenter could both upload <em>and then use</em> a deck during a live meeting. The result looked something like the following two screens.</p>
 
-<p>[[posterous-content:GdzJgHItbfFEhCniAsbq]]
+<p><img src="http://dl.dropbox.com/u/3746322/designing-for-change.png">
 Image 1: The Original Selection Screen</p>
 
 <p>(Please ignore the design flaws, some of these shots were of prototype interfaces.)</p>
@@ -22,7 +22,7 @@ Image 1: The Original Selection Screen</p>
 
 <p>The problem shows up when our design/product team decides the interface is not very straightforward, and I agree, mainly in the separation of the select/upload flow. Our new design separates out the two into separate tabs as seen here:</p>
 
-<p>[[posterous-content:yquovwDcJeokGfyiJhGF]]
+<p><img src="http://dl.dropbox.com/u/3746322/media_httpfcllyitems3_DlIeo.png.scaled500.png">
 Image 2: The New Selection Screen</p>
 
 <p>This makes it easy to see here are my decks and if I need more, I go to the upload tab, there are no major redirections or interface changes.</p>
